feat(backend): Various changes to api definition
- Added error response definitions
- Corrected /users/me endpoint to be GET
- Made some fields required in schemes
- Corrected the OAuth flows supported
