# internal/app/api/errors/error.go
@@ -3,26 +3,19 @@ package errors
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
-	"strconv"
+	"pinman/internal/app/generated"
 )
 
-type Error struct {
-	Status string `json:"status"`
-	Title  string `json:"title"`
-	Detail string `json:"detail"`
-	Meta   any    `json:"meta,omitempty"`
-}
-
-func AbortWithError(code int, detail string, ctx *gin.Context, meta ...any) {
-	var metaVar any
+func AbortWithError(code int, detail string, ctx *gin.Context, meta ...map[string]interface{}) {
+	var metaVar map[string]interface{}
 	if len(meta) > 1 {
 		metaVar = meta[0]
 	}
 
-	ctx.AbortWithStatusJSON(code, &Error{
-		Status: strconv.FormatInt(int64(code), 10),
+	ctx.AbortWithStatusJSON(code, &generated.ErrorResponse{
+		Status: code,
 		Title:  http.StatusText(code),
 		Detail: detail,
-		Meta:   metaVar,
+		Meta:   &metaVar,
 	})
 }
